--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: Ankit Ravankar # the website title (if blank, full name will be used instead)
 first_name: Ankit 
-middle_name: 
+middle_name: A.
 last_name: Ravankar
 email: ankit[at]srd.mech.tohoku.ac.jp
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
