--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: Ankit-Ravankar # your profile on ResearchGate
 scholar_userid: DOiXntEAAAAJ # your Google Scholar ID
-scopus_id: 0000-0002-5104-9782 # your profile on Scopus
+scopus_id: 55032275000 # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
 stackoverflow_id: # your stackoverflow id
