Update bibliograpy and selected works try

--- a/_config.yml
+++ b/_config.yml
@@ -314,7 +314,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
   last_name: [Ravankar]
-  first_name: [Ankit, A.]
+  first_name: [Ankit A]
 
   style: apa
   locale: en
