--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Ankit Ravankar # the website title (if blank, full name will be used instead)
+title: <strong>Ankit</strong> Ravankar # the website title (if blank, full name will be used instead)
 first_name: Ankit 
 middle_name: 
 last_name: Ravankar
