--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Ankit Ravankar # the website title (if blank, full name will be used instead)
-first_name: <strong>Ankit</strong> 
+first_name: Ankit 
 middle_name: 
 last_name: Ravankar
 email: ankit[at]srd.mech.tohoku.ac.jp
@@ -125,7 +125,7 @@ cronitor_analytics: # cronitor RUM analytics site ID (format: XXXXXXXXX)
 pirsch_analytics: # your Pirsch analytics site ID (length 32 characters)
 
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag
-google_site_verification: # your google-site-verification ID (Google Search Console)
+google_site_verification: DMJ6uFw9X9DwXRICjxgJJcvrhdggTPZgsmDPfZukQWI # your google-site-verification ID (Google Search Console)
 bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
