update fevicon to image

--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ middle_name:
 last_name: Ravankar
 email: ankit[at]srd.mech.tohoku.ac.jp
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Personal website of Ankit Ravankar, a robotics researcher specializing in Mobile Robotics. Explore my publications, projects, and more.
+  Personal website of Dr. Ankit Ravankar, a robotics researcher and educator in Japan specializing in Mobile Robotics. Explore my publications, projects, and more.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords:  # add your own keywords or leave empty
+keywords: Ankit Ravankar # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: ankit-ghibli.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://ravankit.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
